-- BioVault Biobank Management System
-- PostgreSQL 16+ DDL: tables, keys, constraints, and indexes.

\set ON_ERROR_STOP on

DROP SCHEMA IF EXISTS biobank CASCADE;
CREATE SCHEMA biobank;
SET search_path TO biobank, public;

CREATE TABLE donors (
    donor_id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    donor_code        VARCHAR(20) NOT NULL,
    sex_at_birth      VARCHAR(12) NOT NULL,
    birth_year        SMALLINT,
    blood_type        VARCHAR(3),
    ethnicity         VARCHAR(80),
    donor_status      VARCHAR(12) NOT NULL DEFAULT 'ACTIVE',
    registered_on     DATE NOT NULL DEFAULT CURRENT_DATE,
    created_at        TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at        TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_donors_code UNIQUE (donor_code),
    CONSTRAINT ck_donors_code_format
        CHECK (donor_code ~ '^BIO-D[0-9]{4}$'),
    CONSTRAINT ck_donors_sex
        CHECK (sex_at_birth IN ('FEMALE', 'MALE', 'INTERSEX', 'UNKNOWN')),
    CONSTRAINT ck_donors_birth_year
        CHECK (birth_year IS NULL OR birth_year BETWEEN 1900 AND 2100),
    CONSTRAINT ck_donors_blood_type
        CHECK (blood_type IS NULL OR blood_type IN ('A+', 'A-', 'B+', 'B-', 'AB+', 'AB-', 'O+', 'O-')),
    CONSTRAINT ck_donors_status
        CHECK (donor_status IN ('ACTIVE', 'INACTIVE', 'WITHDRAWN', 'DECEASED'))
);

CREATE TABLE consent_types (
    consent_type_id   SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    consent_code      VARCHAR(30) NOT NULL,
    consent_name      VARCHAR(100) NOT NULL,
    description       TEXT,
    CONSTRAINT uq_consent_types_code UNIQUE (consent_code)
);

CREATE TABLE consents (
    consent_id        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    donor_id          BIGINT NOT NULL,
    consent_type_id   SMALLINT NOT NULL,
    version_no        VARCHAR(15) NOT NULL,
    granted_on        DATE NOT NULL,
    expires_on        DATE,
    consent_status    VARCHAR(12) NOT NULL,
    restrictions      TEXT,
    recorded_at       TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_consents_donor
        FOREIGN KEY (donor_id) REFERENCES donors(donor_id) ON DELETE RESTRICT,
    CONSTRAINT fk_consents_type
        FOREIGN KEY (consent_type_id) REFERENCES consent_types(consent_type_id) ON DELETE RESTRICT,
    CONSTRAINT uq_consents_donor_type_version
        UNIQUE (donor_id, consent_type_id, version_no),
    CONSTRAINT ck_consents_status
        CHECK (consent_status IN ('ACTIVE', 'EXPIRED', 'WITHDRAWN', 'DECLINED')),
    CONSTRAINT ck_consents_dates
        CHECK (expires_on IS NULL OR expires_on >= granted_on)
);

CREATE TABLE researchers (
    researcher_id     BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    researcher_code   VARCHAR(20) NOT NULL,
    full_name         VARCHAR(120) NOT NULL,
    email             VARCHAR(180) NOT NULL,
    institution       VARCHAR(160) NOT NULL,
    role_title        VARCHAR(80) NOT NULL,
    is_active         BOOLEAN NOT NULL DEFAULT TRUE,
    CONSTRAINT uq_researchers_code UNIQUE (researcher_code),
    CONSTRAINT uq_researchers_email UNIQUE (email),
    CONSTRAINT ck_researchers_code_format
        CHECK (researcher_code ~ '^RES-[0-9]{3}$'),
    CONSTRAINT ck_researchers_email
        CHECK (position('@' IN email) > 1)
);

CREATE TABLE research_projects (
    project_id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    project_code          VARCHAR(20) NOT NULL,
    project_title         VARCHAR(200) NOT NULL,
    lead_researcher_id    BIGINT NOT NULL,
    ethics_approval_code  VARCHAR(40) NOT NULL,
    start_date            DATE NOT NULL,
    end_date              DATE,
    project_status        VARCHAR(12) NOT NULL DEFAULT 'PLANNED',
    CONSTRAINT fk_projects_lead
        FOREIGN KEY (lead_researcher_id) REFERENCES researchers(researcher_id) ON DELETE RESTRICT,
    CONSTRAINT uq_projects_code UNIQUE (project_code),
    CONSTRAINT uq_projects_ethics UNIQUE (ethics_approval_code),
    CONSTRAINT ck_projects_code_format
        CHECK (project_code ~ '^PRJ-[0-9]{3}$'),
    CONSTRAINT ck_projects_status
        CHECK (project_status IN ('PLANNED', 'ACTIVE', 'COMPLETED', 'SUSPENDED')),
    CONSTRAINT ck_projects_dates
        CHECK (end_date IS NULL OR end_date >= start_date)
);

CREATE TABLE project_researchers (
    project_id        BIGINT NOT NULL,
    researcher_id     BIGINT NOT NULL,
    project_role      VARCHAR(60) NOT NULL,
    joined_on         DATE NOT NULL,
    left_on           DATE,
    PRIMARY KEY (project_id, researcher_id),
    CONSTRAINT fk_project_researchers_project
        FOREIGN KEY (project_id) REFERENCES research_projects(project_id) ON DELETE CASCADE,
    CONSTRAINT fk_project_researchers_researcher
        FOREIGN KEY (researcher_id) REFERENCES researchers(researcher_id) ON DELETE RESTRICT,
    CONSTRAINT ck_project_researchers_dates
        CHECK (left_on IS NULL OR left_on >= joined_on)
);

CREATE TABLE sample_types (
    sample_type_id    SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    type_code         VARCHAR(20) NOT NULL,
    type_name         VARCHAR(100) NOT NULL,
    default_unit      VARCHAR(10) NOT NULL,
    min_storage_temp_c NUMERIC(5,1),
    max_storage_temp_c NUMERIC(5,1),
    CONSTRAINT uq_sample_types_code UNIQUE (type_code),
    CONSTRAINT ck_sample_types_unit
        CHECK (default_unit IN ('mL', 'uL', 'mg', 'count')),
    CONSTRAINT ck_sample_types_temperature
        CHECK (
            min_storage_temp_c IS NULL
            OR max_storage_temp_c IS NULL
            OR min_storage_temp_c <= max_storage_temp_c
        )
);

CREATE TABLE collection_events (
    collection_event_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    event_code           VARCHAR(24) NOT NULL,
    donor_id             BIGINT NOT NULL,
    collected_by         BIGINT NOT NULL,
    collected_at         TIMESTAMPTZ NOT NULL,
    collection_site      VARCHAR(140) NOT NULL,
    protocol_code        VARCHAR(40) NOT NULL,
    fasting_status       VARCHAR(12) NOT NULL DEFAULT 'UNKNOWN',
    notes                TEXT,
    CONSTRAINT fk_collection_events_donor
        FOREIGN KEY (donor_id) REFERENCES donors(donor_id) ON DELETE RESTRICT,
    CONSTRAINT fk_collection_events_researcher
        FOREIGN KEY (collected_by) REFERENCES researchers(researcher_id) ON DELETE RESTRICT,
    CONSTRAINT uq_collection_events_code UNIQUE (event_code),
    CONSTRAINT ck_collection_events_code_format
        CHECK (event_code ~ '^CE-[0-9]{4}$'),
    CONSTRAINT ck_collection_events_fasting
        CHECK (fasting_status IN ('FASTING', 'NON_FASTING', 'UNKNOWN'))
);

CREATE TABLE samples (
    sample_id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    sample_code           VARCHAR(24) NOT NULL,
    collection_event_id   BIGINT NOT NULL,
    sample_type_id        SMALLINT NOT NULL,
    received_at           TIMESTAMPTZ NOT NULL,
    initial_quantity      NUMERIC(14,3) NOT NULL,
    quantity_unit         VARCHAR(10) NOT NULL,
    quality_status        VARCHAR(16) NOT NULL DEFAULT 'PENDING',
    sample_status         VARCHAR(16) NOT NULL DEFAULT 'AVAILABLE',
    processing_method     VARCHAR(120),
    notes                 TEXT,
    created_at            TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at            TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_samples_collection_event
        FOREIGN KEY (collection_event_id) REFERENCES collection_events(collection_event_id) ON DELETE RESTRICT,
    CONSTRAINT fk_samples_type
        FOREIGN KEY (sample_type_id) REFERENCES sample_types(sample_type_id) ON DELETE RESTRICT,
    CONSTRAINT uq_samples_code UNIQUE (sample_code),
    CONSTRAINT ck_samples_code_format
        CHECK (sample_code ~ '^SMP-[0-9]{5}$'),
    CONSTRAINT ck_samples_quantity
        CHECK (initial_quantity > 0),
    CONSTRAINT ck_samples_unit
        CHECK (quantity_unit IN ('mL', 'uL', 'mg', 'count')),
    CONSTRAINT ck_samples_quality
        CHECK (quality_status IN ('PENDING', 'ACCEPTED', 'REJECTED', 'QUARANTINED')),
    CONSTRAINT ck_samples_status
        CHECK (sample_status IN ('AVAILABLE', 'RESERVED', 'DEPLETED', 'DESTROYED'))
);

CREATE TABLE storage_units (
    storage_unit_id       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    parent_storage_unit_id BIGINT,
    location_code         VARCHAR(40) NOT NULL,
    unit_name             VARCHAR(120) NOT NULL,
    unit_type             VARCHAR(12) NOT NULL,
    temperature_c         NUMERIC(5,1),
    capacity_positions    INTEGER,
    is_active             BOOLEAN NOT NULL DEFAULT TRUE,
    CONSTRAINT fk_storage_units_parent
        FOREIGN KEY (parent_storage_unit_id) REFERENCES storage_units(storage_unit_id) ON DELETE RESTRICT,
    CONSTRAINT uq_storage_units_code UNIQUE (location_code),
    CONSTRAINT ck_storage_units_type
        CHECK (unit_type IN ('FACILITY', 'ROOM', 'FREEZER', 'RACK', 'BOX')),
    CONSTRAINT ck_storage_units_capacity
        CHECK (capacity_positions IS NULL OR capacity_positions > 0),
    CONSTRAINT ck_storage_units_not_own_parent
        CHECK (parent_storage_unit_id IS NULL OR parent_storage_unit_id <> storage_unit_id)
);

CREATE TABLE aliquots (
    aliquot_id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    aliquot_code          VARCHAR(26) NOT NULL,
    sample_id             BIGINT NOT NULL,
    storage_unit_id       BIGINT NOT NULL,
    position_code         VARCHAR(20) NOT NULL,
    initial_quantity      NUMERIC(14,3) NOT NULL,
    current_quantity      NUMERIC(14,3) NOT NULL,
    quantity_unit         VARCHAR(10) NOT NULL,
    aliquot_status        VARCHAR(12) NOT NULL DEFAULT 'AVAILABLE',
    prepared_on           DATE NOT NULL,
    freeze_thaw_cycles    SMALLINT NOT NULL DEFAULT 0,
    created_at            TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at            TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_aliquots_sample
        FOREIGN KEY (sample_id) REFERENCES samples(sample_id) ON DELETE RESTRICT,
    CONSTRAINT fk_aliquots_storage
        FOREIGN KEY (storage_unit_id) REFERENCES storage_units(storage_unit_id) ON DELETE RESTRICT,
    CONSTRAINT uq_aliquots_code UNIQUE (aliquot_code),
    CONSTRAINT uq_aliquots_position UNIQUE (storage_unit_id, position_code),
    CONSTRAINT ck_aliquots_code_format
        CHECK (aliquot_code ~ '^ALQ-[0-9]{5}$'),
    CONSTRAINT ck_aliquots_quantities
        CHECK (
            initial_quantity > 0
            AND current_quantity >= 0
            AND current_quantity <= initial_quantity
        ),
    CONSTRAINT ck_aliquots_unit
        CHECK (quantity_unit IN ('mL', 'uL', 'mg', 'count')),
    CONSTRAINT ck_aliquots_status
        CHECK (aliquot_status IN ('AVAILABLE', 'RESERVED', 'EXHAUSTED', 'DESTROYED')),
    CONSTRAINT ck_aliquots_cycles
        CHECK (freeze_thaw_cycles >= 0)
);

CREATE TABLE test_types (
    test_type_id      SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    test_code         VARCHAR(20) NOT NULL,
    test_name         VARCHAR(120) NOT NULL,
    result_unit       VARCHAR(30),
    CONSTRAINT uq_test_types_code UNIQUE (test_code)
);

CREATE TABLE test_requests (
    test_request_id   BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    request_code      VARCHAR(24) NOT NULL,
    sample_id         BIGINT NOT NULL,
    test_type_id      SMALLINT NOT NULL,
    requested_by      BIGINT NOT NULL,
    project_id        BIGINT,
    requested_on      DATE NOT NULL,
    completed_on      DATE,
    request_status    VARCHAR(14) NOT NULL DEFAULT 'REQUESTED',
    numeric_result    NUMERIC(14,4),
    text_result       TEXT,
    CONSTRAINT fk_test_requests_sample
        FOREIGN KEY (sample_id) REFERENCES samples(sample_id) ON DELETE RESTRICT,
    CONSTRAINT fk_test_requests_type
        FOREIGN KEY (test_type_id) REFERENCES test_types(test_type_id) ON DELETE RESTRICT,
    CONSTRAINT fk_test_requests_researcher
        FOREIGN KEY (requested_by) REFERENCES researchers(researcher_id) ON DELETE RESTRICT,
    CONSTRAINT fk_test_requests_project
        FOREIGN KEY (project_id) REFERENCES research_projects(project_id) ON DELETE RESTRICT,
    CONSTRAINT uq_test_requests_code UNIQUE (request_code),
    CONSTRAINT ck_test_requests_code_format
        CHECK (request_code ~ '^TR-[0-9]{5}$'),
    CONSTRAINT ck_test_requests_status
        CHECK (request_status IN ('REQUESTED', 'IN_PROGRESS', 'COMPLETED', 'CANCELLED')),
    CONSTRAINT ck_test_requests_dates
        CHECK (completed_on IS NULL OR completed_on >= requested_on),
    CONSTRAINT ck_test_requests_completion
        CHECK (
            (request_status = 'COMPLETED' AND completed_on IS NOT NULL)
            OR (request_status <> 'COMPLETED')
        )
);

CREATE TABLE sample_usage (
    usage_id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    aliquot_id        BIGINT NOT NULL,
    project_id        BIGINT NOT NULL,
    researcher_id     BIGINT NOT NULL,
    used_on           DATE NOT NULL,
    quantity_used     NUMERIC(14,3) NOT NULL,
    purpose           VARCHAR(240) NOT NULL,
    recorded_at       TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_sample_usage_aliquot
        FOREIGN KEY (aliquot_id) REFERENCES aliquots(aliquot_id) ON DELETE RESTRICT,
    CONSTRAINT fk_sample_usage_project
        FOREIGN KEY (project_id) REFERENCES research_projects(project_id) ON DELETE RESTRICT,
    CONSTRAINT fk_sample_usage_researcher
        FOREIGN KEY (researcher_id) REFERENCES researchers(researcher_id) ON DELETE RESTRICT,
    CONSTRAINT ck_sample_usage_quantity
        CHECK (quantity_used > 0)
);

CREATE TABLE audit_log (
    audit_id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    table_name        VARCHAR(63) NOT NULL,
    record_id         BIGINT NOT NULL,
    operation         VARCHAR(8) NOT NULL,
    old_values        JSONB,
    new_values        JSONB,
    changed_by        VARCHAR(100) NOT NULL DEFAULT CURRENT_USER,
    changed_at        TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_audit_log_operation
        CHECK (operation IN ('UPDATE', 'DELETE'))
);

-- Foreign-key indexes are explicit because PostgreSQL does not create them automatically.
CREATE INDEX idx_consents_donor_status_dates
    ON consents (donor_id, consent_status, granted_on, expires_on);
CREATE INDEX idx_collection_events_donor_date
    ON collection_events (donor_id, collected_at DESC);
CREATE INDEX idx_samples_collection_event
    ON samples (collection_event_id);
CREATE INDEX idx_samples_type_status
    ON samples (sample_type_id, sample_status, quality_status);
CREATE INDEX idx_storage_units_parent
    ON storage_units (parent_storage_unit_id);
CREATE INDEX idx_aliquots_sample
    ON aliquots (sample_id);
CREATE INDEX idx_aliquots_availability
    ON aliquots (aliquot_status, current_quantity)
    WHERE aliquot_status = 'AVAILABLE';
CREATE INDEX idx_test_requests_sample_status
    ON test_requests (sample_id, request_status);
CREATE INDEX idx_test_requests_project
    ON test_requests (project_id);
CREATE INDEX idx_sample_usage_project_date
    ON sample_usage (project_id, used_on DESC);
CREATE INDEX idx_sample_usage_aliquot
    ON sample_usage (aliquot_id);
CREATE INDEX idx_project_researchers_researcher
    ON project_researchers (researcher_id);
CREATE INDEX idx_audit_log_record
    ON audit_log (table_name, record_id, changed_at DESC);

COMMENT ON SCHEMA biobank IS
    'Anonymized research biobank inventory, consent, testing, and usage tracking.';
COMMENT ON TABLE donors IS
    'Anonymized donor records; direct personal identifiers are deliberately excluded.';
COMMENT ON TABLE project_researchers IS
    'Associative table resolving the many-to-many project/researcher relationship.';
COMMENT ON TABLE sample_usage IS
    'Immutable record of research consumption; insert through record_sample_usage().';
